# pax-s920

./: .gitignore  LICENSE  README.md  env.sh  platform.sh  setup_toolchain.sh  shell.nix  windows.bat  xcb-setup.md
deprecated_homebrew/: README.md
deprecated_homebrew/ClassiCube/: build.sh
deprecated_homebrew/examples/: sd_mount.c
deprecated_homebrew/paxparking/: build.sh
deprecated_homebrew/telnet/: font.h  readme.md  ui.c  ui.h
homebrew/: build_helper.cmake  build_helper.sh
homebrew/BadApple/: .gitignore  CMakeLists.txt  audio.cpp  build.sh  main.cpp
homebrew/BasiliskII/: build.sh
homebrew/ClassiCube/: ClassiCube  build.sh
homebrew/GPMD85Emulator/: build.sh
homebrew/MilkyTrackerPAX/: CMakeLists.txt  build.sh  tracker_CMakeLists.txt
homebrew/MilkyTrackerPAX/MilkyTrackerPAX/: info.txt
homebrew/PAXBoard/: README.md  app.c  app.h  main.c  ui.c  ui.h
homebrew/PAXGBC/: CMakeLists.txt  build.sh  main.cpp
homebrew/SDL/: build.sh  install.sh
homebrew/SDL2/: build.sh
homebrew/SuicaReader/: .gitignore  Makefile  main.c  readme.md
homebrew/examples/: Makefile  emv_example.c  felica_example.c  mifare_example.c  osal_test.c
homebrew/gmp/: build.sh
homebrew/magstripe_reader/: .gitignore  Makefile  main.c
homebrew/mpfr/: build.sh
homebrew/paxDOOM/: build.sh
homebrew/paxman/: .gitignore  Makefile  build.sh
homebrew/paxparking/: build.sh
homebrew/paxspringboard/: Makefile  app.c  app.h  applist.c  applist.h  apploader.c  apploader.h  build.sh  main.c  readme.md  ui.c  ui.h
pax-build/: README.md  magstripe-reader.c  osal.h  osal_test.c  osal_test2.c  xui.h  xui_test.c
pax-docs/: README.md
pax-tools/: readme.md
(+64 files in other folders)
